Change binary name from 'dockwatch' to 'dw' for easier usage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "dockwatch"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "dw"
+path = "src/main.rs"
+
 [dependencies]
 bollard = "0.19.4"
 clap = { version = "4.5.51", features = ["derive"] }
